--- a/index.html
+++ b/index.html
@@ -87,15 +87,34 @@
 
     <div class="container">
         <h2>Accede a tu cuenta</h2>
-        <form action="catalogo.html" method="GET">
+        <form id="loginForm">
             <input type="text" name="matricula" placeholder="Matrícula" required>
             <input type="password" name="contrasena" placeholder="Contraseña" required>
             <button type="submit">Ingresar</button>
         </form>
+<p id="error" style="color: red; display: none; margin-top: 1rem;">Matrícula o contraseña incorrecta</p>
         <div class="footer">
             &copy; 2025 Biblioteca Universidad Estudiantil
         </div>
     </div>
+<script>
+    document.getElementById("loginForm").addEventListener("submit", function(event) {
+        event.preventDefault(); // evita que el formulario se envíe normalmente
+
+        const matricula = event.target.matricula.value.trim();
+        const contrasena = event.target.contrasena.value;
+
+        // Puedes cambiar esto por los datos que quieras permitir
+        const matriculaValida = "123456";
+        const contrasenaValida = "biblioteca2025";
+
+        if (matricula === matriculaValida && contrasena === contrasenaValida) {
+            window.location.href = "catalogo.html"; // redirige a la página de libros
+        } else {
+            document.getElementById("error").style.display = "block";
+        }
+    });
+</script>
 
 </body>
 </html>
