--- a/index.html
+++ b/index.html
@@ -11,33 +11,26 @@
             margin: 0;
             padding: 0;
             display: flex;
-            flex-direction: column;
+            justify-content: center;
             align-items: center;
-            min-height: 100vh;
-        }
-        .header {
-            background-color: #3498db;
-            color: white;
-            width: 100%;
-            padding: 1rem 0;
-            text-align: center;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            font-size: 1.8rem;
-            font-weight: bold;
+            height: 100vh;
         }
         .container {
             background-color: #ffffff;
             padding: 2rem;
             border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-            width: 90%;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 100%;
             max-width: 400px;
             text-align: center;
-            margin-top: 2rem;
         }
-        h2 {
-            color: #2c3e50;
-            margin-bottom: 1rem;
+        .header {
+            background-color: #3498db;
+            color: white;
+            padding: 1rem;
+            border-radius: 8px;
+            margin-bottom: 1.5rem;
+            font-size: 1.5rem;
         }
         form {
             display: flex;
@@ -50,13 +43,6 @@
             border: 1px solid #ccc;
             border-radius: 8px;
             font-size: 1rem;
-            background-color: #f9f9f9;
-        }
-        input[type="text"]:focus,
-        input[type="password"]:focus {
-            border-color: #3498db;
-            outline: none;
-            background-color: #ffffff;
         }
         button {
             background-color: #3498db;
@@ -66,55 +52,56 @@
             border-radius: 8px;
             font-size: 1rem;
             cursor: pointer;
-            transition: background-color 0.3s, transform 0.2s;
+            transition: background-color 0.3s;
         }
         button:hover {
             background-color: #2980b9;
-            transform: translateY(-2px);
         }
         .footer {
             margin-top: 1.5rem;
             font-size: 0.9rem;
             color: #7f8c8d;
         }
+        #error {
+            color: red;
+            display: none;
+            margin-top: 1rem;
+        }
     </style>
 </head>
 <body>
 
-    <div class="header">
-        Biblioteca Escolar
-    </div>
-
     <div class="container">
-        <h2>Accede a tu cuenta</h2>
+        <div class="header">Biblioteca Escolar</div>
+        <p>Accede a tu cuenta</p>
         <form id="loginForm">
             <input type="text" name="matricula" placeholder="Matrícula" required>
             <input type="password" name="contrasena" placeholder="Contraseña" required>
             <button type="submit">Ingresar</button>
         </form>
-<p id="error" style="color: red; display: none; margin-top: 1rem;">Matrícula o contraseña incorrecta</p>
+        <p id="error">Matrícula o contraseña incorrecta</p>
         <div class="footer">
             &copy; 2025 Biblioteca Universidad Estudiantil
         </div>
     </div>
-<script>
-    document.getElementById("loginForm").addEventListener("submit", function(event) {
-        event.preventDefault(); // evita que el formulario se envíe normalmente
 
-        const matricula = event.target.matricula.value.trim();
-        const contrasena = event.target.contrasena.value;
+    <script>
+        document.getElementById("loginForm").addEventListener("submit", function(event) {
+            event.preventDefault();
 
-        // Puedes cambiar esto por los datos que quieras permitir
-        const matriculaValida = "123456";
-        const contrasenaValida = "biblioteca2025";
+            const matricula = event.target.matricula.value.trim();
+            const contrasena = event.target.contrasena.value;
 
-        if (matricula === matriculaValida && contrasena === contrasenaValida) {
-            window.location.href = "catalogo.html"; // redirige a la página de libros
-        } else {
-            document.getElementById("error").style.display = "block";
-        }
-    });
-</script>
+            const matriculaValida = "123456";
+            const contrasenaValida = "biblioteca2025";
+
+            if (matricula === matriculaValida && contrasena === contrasenaValida) {
+                window.location.href = "catalogo.html";
+            } else {
+                document.getElementById("error").style.display = "block";
+            }
+        });
+    </script>
 
 </body>
 </html>
