--- a/catalogo.html
+++ b/catalogo.html
@@ -3,79 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catálogo de Libros - Ingeniería</title>
+    <title>Catálogo de Libros - Biblioteca Escolar</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #eef2f7;
+            background-color: #f0f4f8;
             margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            min-height: 100vh;
+            padding: 2rem;
         }
         .header {
             background-color: #3498db;
             color: white;
-            width: 100%;
-            padding: 1rem 0;
-            text-align: center;
-            font-size: 1.8rem;
-            font-weight: bold;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        .container {
-            margin-top: 2rem;
-            background: #fff;
-            padding: 2rem;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            width: 90%;
-            max-width: 600px;
-        }
-        h2 {
-            color: #2c3e50;
-            text-align: center;
-            margin-bottom: 1rem;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-        li {
-            padding: 0.75rem;
-            margin: 0.5rem 0;
-            background-color: #f8f9fa;
+            padding: 1rem;
             border-radius: 8px;
-            transition: transform 0.2s, background-color 0.2s;
-            cursor: pointer;
-            font-size: 1.1rem;
+            text-align: center;
+            font-size: 2rem;
+            margin-bottom: 2rem;
         }
-        li:hover {
+        .book-list {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            max-width: 600px;
+            margin: 0 auto;
+        }
+        .book-item {
+            background-color: white;
+            padding: 1rem;
+            border-radius: 8px;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s, background-color 0.3s;
+            cursor: pointer;
+        }
+        .book-item:hover {
             transform: scale(1.05);
-            background-color: #d0e7ff;
+            background-color: #e1f5fe;
+        }
+        .footer {
+            text-align: center;
+            margin-top: 2rem;
+            font-size: 0.9rem;
+            color: #7f8c8d;
         }
     </style>
 </head>
 <body>
 
-    <div class="header">
-        Biblioteca Escolar
+    <div class="header">Catálogo de Ingeniería</div>
+
+    <div class="book-list">
+        <div class="book-item">Fundamentos de Ingeniería Eléctrica</div>
+        <div class="book-item">Introducción a la Ingeniería Mecánica</div>
+        <div class="book-item">Ingeniería de Software Moderna</div>
+        <div class="book-item">Termodinámica Aplicada</div>
+        <div class="book-item">Circuitos Eléctricos Básicos</div>
+        <div class="book-item">Diseño Estructural para Ingeniería Civil</div>
+        <div class="book-item">Automatización y Control Industrial</div>
+        <div class="book-item">Electrónica Analógica y Digital</div>
+        <div class="book-item">Ingeniería de Materiales</div>
+        <div class="book-item">Programación en C para Ingenieros</div>
     </div>
 
-    <div class="container">
-        <h2>Libros de Ingeniería</h2>
-        <ul>
-            <li>Mecánica de Materiales - R.C. Hibbeler</li>
-            <li>Fundamentos de Termodinámica - Sonntag & Borgnakke</li>
-            <li>Electrónica Analógica - Sedra & Smith</li>
-            <li>Ingeniería de Software - Ian Sommerville</li>
-            <li>Cálculo Vectorial - Marsden & Tromba</li>
-            <li>Resistencia de Materiales - J.M. Gere</li>
-            <li>Dinámica de Sistemas - Katsuhiko Ogata</li>
-            <li>Control Moderno de Sistemas Dinámicos - Dorf & Bishop</li>
-        </ul>
+    <div class="footer">
+        &copy; 2025 Biblioteca Universidad Estudiantil
     </div>
 
 </body>
