--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="container">
         <div class="header">Biblioteca Escolar</div>
         <p>Accede a tu cuenta</p>
-        <form id="loginForm" method="POST" action="#">
+        <form id="loginForm">
             <input type="text" name="username" placeholder="Matrícula" required>
             <input type="password" name="password" placeholder="Contraseña" required>
             <button type="submit">Ingresar</button>
@@ -86,16 +86,16 @@
     </div>
 
     <script>
+        // Eliminé la parte que prevenía el envío del formulario
         document.getElementById("loginForm").addEventListener("submit", function(event) {
-            event.preventDefault();
-
+            // event.preventDefault();  // Eliminar esta línea
             const username = event.target.username.value.trim();
             const password = event.target.password.value;
 
-            const usernameValido = "123456";
-            const passwordValido = "biblioteca2025";
+            const validUsername = "123456";
+            const validPassword = "biblioteca2025";
 
-            if (username === usernameValido && password === passwordValido) {
+            if (username === validUsername && password === validPassword) {
                 window.location.href = "catalogo.html";
             } else {
                 document.getElementById("error").style.display = "block";
