--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="container">
         <div class="header">Biblioteca Escolar</div>
         <p>Accede a tu cuenta</p>
-        <form id="loginForm">
+        <form id="loginForm" method="POST">
             <input type="text" name="username" placeholder="Matrícula" required>
             <input type="password" name="password" placeholder="Contraseña" required>
             <button type="submit">Ingresar</button>
@@ -87,20 +87,21 @@
 
     <script>
         // Eliminé la parte que prevenía el envío del formulario
-        document.getElementById("loginForm").addEventListener("submit", function(event) {
-            // event.preventDefault();  // Eliminar esta línea
-            const username = event.target.username.value.trim();
-            const password = event.target.password.value;
+       document.getElementById("loginForm").addEventListener("submit", function(event) {
+    // event.preventDefault();  // Asegúrate de que esta línea esté eliminada o comentada
 
-            const validUsername = "123456";
-            const validPassword = "biblioteca2025";
+    const matricula = event.target.matricula.value.trim();
+    const contrasena = event.target.contrasena.value;
 
-            if (username === validUsername && password === validPassword) {
-                window.location.href = "catalogo.html";
-            } else {
-                document.getElementById("error").style.display = "block";
-            }
-        });
+    const matriculaValida = "123456";
+    const contrasenaValida = "biblioteca2025";
+
+    if (matricula === matriculaValida && contrasena === contrasenaValida) {
+        window.location.href = "catalogo.html";
+    } else {
+        document.getElementById("error").style.display = "block";
+    }
+});
     </script>
 
 </body>
